# data-intensive-computing

./: .gitattributes  .gitignore  README.md  output.txt  pyproject.toml  run_assignment1.sh
data/: reviews_devset.json
docs/: report.md
src/: run_assignment1.sh
src/data_intensive_computing/: __init__.py  spark.py  text.py
src/data_intensive_computing/assignment1/: __init__.py  chi_square.py  doc_counts.py  run.py
src/data_intensive_computing/jobs/: __init__.py  chi_square_terms.py  format_output.py  merge_category_terms.py  word_count.py
tests/: conftest.py  test_chi_square_terms.py  test_format_output.py  test_text.py  test_word_count.py
