[project]
name = "data-intensive-computing"
version = "0.1.0"
description = "Local PySpark exercises managed with uv."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "mrjob>=0.7,<0.8",
    "pyspark>=3.5,<4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0,<9.0",
    "ruff>=0.11,<0.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/data_intensive_computing"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.uv]
package = true
